[gd_scene load_steps=13 format=2]

[ext_resource path="res://infrastructure/player.gd" type="Script" id=1]
[ext_resource path="res://infrastructure/debug_message.gd" type="Script" id=2]
[ext_resource path="res://fonts/cutive_mono_48.tres" type="DynamicFont" id=3]
[ext_resource path="res://infrastructure/menus/pause_menu.tscn" type="PackedScene" id=4]
[ext_resource path="res://infrastructure/backpack.gd" type="Script" id=5]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.001

[sub_resource type="CylinderShape" id=2]
margin = 0.001
radius = 0.3
height = 1.77

[sub_resource type="Environment" id=3]
background_mode = 1
background_color = Color( 0.160784, 0.160784, 0.160784, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.196078 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.992157, 0.00784314, 0.376471, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.0509804, 0.937255, 0.666667, 1 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.992157, 0.227451, 0.623529, 1 )

[node name="player" type="RigidBody" groups=[
"player",
]]
physics_material_override = SubResource( 1 )
contacts_reported = 10
contact_monitor = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )

[node name="body_collider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.885, 0 )
shape = SubResource( 2 )

[node name="pivot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.64, 0 )

[node name="hold_position" type="Spatial" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.4, -1 )

[node name="camera" type="Camera" parent="pivot"]
cull_mask = 2148532221
environment = SubResource( 3 )

[node name="hold_viewport_container" type="ViewportContainer" parent="pivot/camera"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hold_viewport" type="Viewport" parent="pivot/camera/hold_viewport_container"]
size = Vector2( 1920, 1080 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="hold_camera" type="Camera" parent="pivot/camera/hold_viewport_container/hold_viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.63492, 0 )
cull_mask = 2

[node name="pickup_detect_ray" type="RayCast" parent="pivot"]
enabled = true
cast_to = Vector3( 0, 0, -2 )
collision_mask = 2

[node name="debug_message" type="Label" parent="."]
margin_top = 1026.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
align = 1
autowrap = true
clip_text = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reticle" type="Label" parent="."]
margin_left = 955.0
margin_top = 535.0
margin_right = 965.0
margin_bottom = 549.0
text = "+"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="object_highlight" type="ReferenceRect" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
mouse_filter = 2
border_color = Color( 1, 1, 1, 1 )
editor_only = false

[node name="crouch_tween" type="Tween" parent="."]

[node name="pause_menu" parent="." instance=ExtResource( 4 )]
pause_mode = 2

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0 )
radius = 0.3
height = 0.2
sides = 32
material = SubResource( 5 )

[node name="velocity" type="Spatial" parent="."]
visible = false

[node name="CSGBox" type="CSGBox" parent="velocity"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
width = 0.0663925
height = 0.0544661
material = SubResource( 6 )

[node name="collision_normal" type="Spatial" parent="."]
visible = false

[node name="CSGBox" type="CSGBox" parent="collision_normal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )
width = 0.0663925
height = 0.0544661
material = SubResource( 7 )

[node name="backpack" type="ItemList" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.5
margin_top = -152.0
margin_right = 192.5
margin_bottom = 152.0
custom_fonts/font = ExtResource( 3 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stair_rays" type="Spatial" parent="."]

[node name="CSGBox" type="CSGBox" parent="stair_rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )
height = 0.0544661
depth = 0.066
material = SubResource( 7 )

[node name="stair_ray_bottom" type="RayCast" parent="stair_rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.01, 0 )
enabled = true
cast_to = Vector3( 0.15, 0, 0 )
collision_mask = 4

[node name="stair_ray_middle" type="RayCast" parent="stair_rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.7, 0 )
enabled = true
cast_to = Vector3( 0.25, 0, 0 )
collision_mask = 4

[node name="stair_ray_top" type="RayCast" parent="stair_rays"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 0.7, 0 )
enabled = true
cast_to = Vector3( 0.25, 0, 0 )
collision_mask = 4
[connection signal="tween_all_completed" from="crouch_tween" to="." method="finished_crouching_transition"]
[connection signal="item_selected" from="backpack" to="backpack" method="item_selected"]
